--- a/src/styles/layouts/Footer.scss
+++ b/src/styles/layouts/Footer.scss
@@ -1,13 +1,12 @@
 @import "../global.scss";
 
 .footer {
-    display: inline-flex;
+    display: block;
     float: left;
     margin: 0;
     padding: 3px 5% 3px 5%;
     background-color: $color-background-menu;
-    height: 10vh;
-    width: 100%;
+    width: 100vw;
     .copyright {
         display: inline-block;
         //padding-left: 5%;
