--- a/src/styles/layouts/Main.scss
+++ b/src/styles/layouts/Main.scss
@@ -4,7 +4,6 @@
     display: inline-flex;
     float: right;
     background-color: $color-background-content;
-    height: 100vh;
     width: 67%;
     margin: 0;
     padding: 5%;
@@ -19,5 +18,10 @@
             display: block;
             font-size: $base-size;
         }
+    }
+    @include tablet-large {
+        display: block;
+        float: center;
+        width: 100vw;
     }
 }
