--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,18 +1,18 @@
 // media query
 @mixin mobile-large {
-    @media (min-width: 576px) {
+    @media (max-width: 576px) {
       @content;
     }
   }
   
   @mixin tablet-small {
-    @media (min-width: 768px) {
+    @media (max-width: 768px) {
       @content;
     }
   }
   
   @mixin tablet-large {
-    @media (min-width: 992px) {
+    @media (max-width: 992px) {
       @content;
     }
   }
