--- a/src/styles/layouts/Header.scss
+++ b/src/styles/layouts/Header.scss
@@ -6,29 +6,27 @@
     margin: 0;
     padding: 5px;
     width: 33%;
-    height: 100vh;
     background-color: $color-background-footer;
     .navigation {
         display: block;
+        margin: 25px;
         .title {
-            margin: 5px;
+            margin: 15px 15px 15vh;
             padding-top: 30px;
-            .title_name {
-                margin-top: 5%px;
-                padding: 20px;
-                font-size: $base-size * 3.4;
-                font-family: $font-title;
-                font-weight: 900;
-                text-align: center;
-                color: $color-text-title;
+            .title_logo {
+                width: 110%;
+                float: center;
+                @include tablet-large {
+                    width: 100%;
+                }
             }
             .title_social {
                 margin: 10px;
-                padding: 10px;
+                padding-top: 15vh;
                 font-size: 30px;
                 text-align: center;
                 a{
-                    padding-top: 30vh;
+                    margin-top: 30vh;
                     margin: 5px;
                     color: $color-socials;
                     &:hover {
@@ -39,7 +37,7 @@
         }
         .navigation_menu {
             margin: 10px;
-            padding: 45% 10px 10px 10px;
+        //    padding: 45% 10px 10px 10px;
             font-size: $base-size * 2;
             color: $color-text;
             font-family: $font-menu;
