Page in building content

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,8 +2,9 @@ $color-background-menu: #010626;//#0D40A6; // #0f4c81;
 $color-background-content: #defff7;//#BFBFBF;//#F29F05;
 $color-background-footer: #0A1659; // #060e1a;
 $color-text-title: #F29F05;
-$color-text-dark: #bbb;
+$color-text-dark: #0A1659;
 $color-text: #04BF8A;
+$color-text-red: #F22E2E;
 $color-text-light: #fff;
 $color-socials: #025959;
 
