--- a/src/styles/layouts/Main.scss
+++ b/src/styles/layouts/Main.scss
@@ -8,15 +8,36 @@
     margin: 0;
     padding: 5%;
     .content {
-        display: block;
-        margin: 10px;
+        margin: auto;
         padding: 15px;
-        width: 100%;
-        color: $color-text-dark;
+        display: block;
+        width: 100vw;
+        font-family: $font-code-pro;
         text-align: center;
-        p {
+        h1 {
             display: block;
-            font-size: $base-size;
+            margin: 10px;
+            padding: 15px;
+            width: 100%;
+            color: $color-text-dark;
+            text-align: center;
+        }
+        p{
+            color: $color-text-dark;
+        }
+        span {
+            display: block;
+            font-size: $base-size * 1.5;
+            color: $color-text-title;
+        }
+        h2 {
+            color: $color-text-red;
+            font-size: $base-size * 3;
+        }
+        @include tablet-large {
+            isplay: block;
+            float: center;
+            width: 100%;
         }
     }
     @include tablet-large {
