--- a/src/styles/layouts/Footer.scss
+++ b/src/styles/layouts/Footer.scss
@@ -7,6 +7,7 @@
     padding: 3px 5% 3px 5%;
     background-color: $color-background-menu;
     width: 100vw;
+    max-height: 15vh;
     .copyright {
         display: inline-block;
         //padding-left: 5%;
