Add routing to the website

--- a/src/styles/layouts/Header.scss
+++ b/src/styles/layouts/Header.scss
@@ -42,6 +42,11 @@
                 font-size: $base-size * 2;
                 color: $color-text;
                 font-family: $font-menu;
+                .menu_item{
+                    &:hover {
+                        color: $color-text-title;
+                    }
+                }
             }
         }
     }
