Add new component in ProjectsPage

--- a/src/styles/layouts/Footer.scss
+++ b/src/styles/layouts/Footer.scss
@@ -1,7 +1,7 @@
 @import "../global.scss";
 
 .footer {
-    display: flex;
+    display: inline-flex;
     float: left;
     margin: 0;
     padding: 3px 5% 3px 5%;
