Add ProjectItem component

--- a/src/styles/layouts/Main.scss
+++ b/src/styles/layouts/Main.scss
@@ -7,7 +7,7 @@
     width: 67%;
     margin: 0;
     padding: 5%;
-    min-height: 100%;
+    min-height: 100vh;
     position: relative;
     @include tablet-large {
       padding: 15px 0;
