--- a/src/styles/layouts/Header.scss
+++ b/src/styles/layouts/Header.scss
@@ -7,7 +7,7 @@
     padding: 5px;
     width: 33%;
     background-color: $color-background-footer;
-    min-height: 100%;
+    min-height: 100vh;
     .navigation {
         display: flex;
         margin-left: 25px;
