--- a/src/styles/pages/ProjectItem/ProjectItem.scss
+++ b/src/styles/pages/ProjectItem/ProjectItem.scss
@@ -1,5 +1,11 @@
 @import "../../global.scss";
 
-.projectItem {
-    display: list-item;
+.project__item {
+    //display: inline-flex;
+    list-style: none;
+    border: 1px solid black;
+    .project__description{
+        display: inline-flex;
+        border: 1px solid black;
+    }
 }
