--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -15,6 +15,9 @@ body {
   padding: 0;
   // overflow-y: scroll;
 }
+div {
+  //border: 1px dotted black;
+}
 
 .container {
   //min-width: 1200px;
