--- a/src/styles/layouts/Header.scss
+++ b/src/styles/layouts/Header.scss
@@ -3,33 +3,35 @@
 .header {
     display: inline-flex;
     float: left;
-    margin: 0;
-    padding: 5px;
-    width: 33%;
+    padding-bottom: 100px;
+    width: 25%;
     background-color: $color-background-footer;
     min-height: 100vh;
     .navigation {
         display: flex;
-        margin-left: 25px;
+        margin-left: 10%;
         max-height: fit-content;
-        
         .title {
             padding: 20px 0px 30px;
-            //position: fixed;
             .title_logo {
-                width: 100%;
+                width: 90%;
                 float: center;
+                //border: 1px solid black;
                 @include tablet-large {
                     width: 100%;
                 }
             }
             .title_social {
-                margin: 10px;
-                padding: 20vh 10vw 5vh;
+                margin: 0 auto 0;
+                padding-top: 5vh;
+                padding-bottom: 9vw;
+                width: 90%;
                 font-size: 30px;
-                float: center;
+                display: inline-flex;
+                justify-content: center;
+                //border: 1px solid black;
                 a{
-                    margin-top: 15vh;
+                    //margin-top: 15vh;
                     margin: 5px;
                     color: $color-socials;
                     &:hover {
@@ -39,13 +41,14 @@
             }
             .navigation_menu {
                 margin: 10px;
-                //padding-top: 5vh;
                 font-size: $base-size * 2;
                 color: $color-text;
                 font-family: $font-menu;
                 position: fixed;
+                list-style: none;
+                //border: 1px solid black;
                 .menu_item{
-                    
+                    margin: 5px;
                     &:hover {
                         color: $color-text-title;
                     }
