--- a/src/styles/pages/ProjectsPage.scss
+++ b/src/styles/pages/ProjectsPage.scss
@@ -1,6 +1,7 @@
 @import "../global.scss";
 
 .projectPage__elements {
-    display: flex;
+    display: inline-flex;
     flex-direction: row;
+    border: 1px solid black;
 }
