--- a/src/styles/layouts/Main.scss
+++ b/src/styles/layouts/Main.scss
@@ -23,7 +23,9 @@
       width: 100%;
       margin: 0;
       padding: 5%;
-      border: 1px solid black;
+      border-bottom: 5px solid $color-text-title;
+      border-top: 5px solid $color-text-title;
+      border-radius: 15px;
       // right: 0;
       // left: 0;
       @include mobile-large {
