change projects elements

--- a/src/styles/pages/ProjectsPage.scss
+++ b/src/styles/pages/ProjectsPage.scss
@@ -1,7 +1,11 @@
 @import "../global.scss";
 
+.page__title {
+    
+
 .projectPage__elements {
     display: inline-flex;
     flex-direction: row;
     border: 1px solid black;
+}
 }
