--- a/src/styles/layouts/Main.scss
+++ b/src/styles/layouts/Main.scss
@@ -14,8 +14,12 @@
       padding: 15px 0;
     }
     .page__title{
-        color: $color-background-menu;
-        border: 1px solid black;
+        //color: $color-background-menu;
+        //border: 1px solid black;
+        background-color: $color-text-title;
+        color: $color-background-footer;
+        text-align: center;
+        border-radius: 15px;
     }
     .wrapper {
       float: right;
