--- a/src/styles/pages/ProjectItem/ProjectItem.scss
+++ b/src/styles/pages/ProjectItem/ProjectItem.scss
@@ -4,11 +4,26 @@
     //display: inline-flex;
     list-style: none;
     //border: 1px solid black;
+    border: 3px solid $color-text-title;
+    border-radius: 15px;
+    margin: 5% 0;
+    padding: 1%;
+    position: relative;
     .project__description{
         display: inline-flex;
-        //border: 1px solid black;
         .projectItem__image {
+            img {
             border-radius: 50%;
+            }
+            .projectItem__link {
+                opacity: 1;
+    position: absolute;
+    top: 105%;
+    left: 50%;
+    transform: translate(-50%);
+    text-align: center;
+            }
         }
+        
     }
 }
